--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <!-- COUNTDOWN (MODIFIÉ : SANS JOURS) -->
             <div class="text-center mb-10">
                 <div class="inline-block bg-blue-50 text-blue-600 text-[10px] font-black uppercase tracking-[0.2em] px-4 py-1.5 rounded-full mb-6 border border-blue-100">
-                    Prochains posts Dans :
+                    Le compte a rebours est en cours de devellopement ...
                 </div>
                 <div class="grid grid-cols-3 gap-4 max-w-[300px] mx-auto">
                     <div class="flex flex-col"><span id="hours" class="countdown-font text-4xl font-bold text-slate-900 tracking-tighter">00</span><span class="text-[8px] font-black text-slate-400 uppercase mt-2">Heures</span></div>
